table header and color css on PO and RFP pages

--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -196,14 +196,14 @@
 
                     <!-- Action Buttons Column -->
                     <ng-container matColumnDef="Action">
-                      <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
-                      <td mat-cell class="text-align-center actions-cell" *matCellDef="let element">
-                        <span class="p-r-10">
+                      <th mat-header-cell *matHeaderCellDef class="text-align-right"></th>
+                      <td mat-cell class="actions-cell" *matCellDef="let element">
+                        <span class="p-r-20">
                           <a href="javascript:void(0)" style="color: #f47721" [routerLink]="['./po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
                         </span>
 
-                        <span>&nbsp;</span>
-                        <span class="p-r-10 float-right cursor-pointer"
+                        <!-- <span>&nbsp;</span> -->
+                        <span class="cursor-pointer"
                           ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
                         ></span>
                       </td>
@@ -258,16 +258,22 @@
                     <ng-container matColumnDef="Action">
                       <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
                       <td mat-cell class="text-align-center" *matCellDef="let element" class="actions-cell">
-                        <span class="p-r-10"
-                          ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['./po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span
-                        >
-                        <span>&nbsp;</span>
-                        <span class="p-r-10 float-right cursor-pointer"
-                          ><a (click)="deleteDraftedPo(element)" matTooltip="Delete"> <img src="../../../../assets/images/delete-button.png" /> </a
-                        ></span>
-                        <span class="p-r-10 float-right cursor-pointer"
-                          ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
-                        ></span>
+                        <span class="p-r-15">
+                          <a href="javascript:void(0)" style="color: #f47721" [routerLink]="['./po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a>
+                        </span>
+                        
+                        <span class="p-r-15 cursor-pointer">
+                          <a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> 
+                            <img src="../../../../assets/images/download-po.png" />
+                          </a>
+                        </span>
+
+                        <span class="cursor-pointer">
+                          <a (click)="deleteDraftedPo(element)" matTooltip="Delete"> 
+                            <img src="../../../../assets/images/delete-button.png" />
+                          </a>
+                        </span>
+                        
                       </td>
                     </ng-container>
 
@@ -283,9 +289,6 @@
                 <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-rem-r-0.50 p-rem-r-0.50' : ''">
                   <mat-panel-title>
                     <div class="col-xs-5 text-left approved">Approved P.O.</div>
-                    <!-- <div class="col-xs-7 text-right grn-note">
-                    *GRN = Goods Receive Note
-                  </div> -->
                   </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -325,16 +328,11 @@
                     <ng-container matColumnDef="Action">
                       <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
                       <td mat-cell *matCellDef="let element" class="actions-cell">
-                        <span class="p-r-10 display-inline-block p-t-5"
+                        <span class="p-r-15 display-inline-block"
                           ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['./po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
                         >
-                        <!-- <span class="p-r-10 display-inline-block p-t-5"
-                        ><a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View Receipts</a></span
-                      > -->
-                        <!-- <span class="p-r-10 cursor-pointer"
-                        ><a (click)="openPaymentRecord(element)" matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a
-                      ></span> -->
-                        <span class="p-r-10 cursor-pointer display-inline-block p-t-5"
+
+                        <span class="p-r-15 cursor-pointer display-inline-block"
                           ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
                         ></span>
 
