--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -21,7 +21,7 @@
     <!-- book now button visible if isFreeTrialSubscription flag is 1 for all countries -->
     <ng-container *ngIf="isBookNow === 1">
       <a mat-raised-button href="https://calendly.com/mm_support/discovery_call" target="_blank"
-        class="main-color main-button pull-left">Book Now</a>
+        class="main-color main-button pull-left">Book a Demo</a>
     </ng-container>
 
     <button class="pull-right p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : '' " mat-button
