po and rfq pages - search and button fixed for responsiveness

--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -456,6 +456,26 @@ s .validTill {
   }
 }
 
+@media only screen and (max-width: 767px) and (min-width: 600px){
+  .po-detail-list {
+    advance-search {
+      margin: 10px 0 10px;
+      display: block;
+    }
+  }
+
+  .po-details{
+    .project{
+      padding-left: 8px;
+      width: 75% !important;
+    }
+
+    .create-po-btn {
+      padding-right: 0.9rem;
+    }
+  }
+}
+
 @media only screen and (max-width: 576px) {
   .example-container {
     .mat-cell,
