--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -22,10 +22,10 @@
     </div>
   </div>
 
-  <div class="p-b-20 min-height parent create-po-dashboard" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp || poCount > 0">
+  <div class="p-b-20 min-height parent create-po-dashboard po-details" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp || poCount > 0">
     <div class="row" [ngClass]="isMobile ? 'ml-0' : ''">
       <div class="col-xs-6">
-        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100 p-l-10' : ' w-vw-14'">
+        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : 'width-30'">
           <input matInput placeholder="Search PO" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
@@ -33,7 +33,7 @@
         </mat-form-field>
       </div>
 
-      <div class="text-right col-xs-6 create-po-btn p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex' : ''">
+      <div class="text-right col-xs-6 create-po-btn p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex justify-content-flex-end p-r-15' : ''">
         <ng-container *ngIf="isMobile">
           <button mat-button class="fltr-btn brand-color" (click)="openFilter()">
             <mat-icon inline="true">filter_list</mat-icon>
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row po-detail-list">
       <ng-container *ngIf="!isMobile; else mobileSearch">
         <div class="col-md-2 align-top">
           <advance-search *ngIf="searchConfig" (submitExport)="applyExport($event)" (submitSearch)="applySearch($event)" [config]="searchConfig"> </advance-search>
