--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -15,17 +15,17 @@
     </div>
   </div>
 
-  <div class="create-po-dashboard p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp || rfqCount > 0">
+  <div class="create-po-dashboard ref-detail p-b-20 min-height parent" *ngIf="submittedRfqListTemp || nonSubmittedRfqListTemp || rfqCount > 0">
     <div class="row" [ngClass]="isMobile ? 'ml-0' : ''">
       <div class="col-xs-6">
-        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : ' w-vw-14'">
+        <mat-form-field class="example-form-field border-input project" [ngClass]="isMobile ? 'w-100' : 'width-30'">
           <input matInput placeholder="Search RFP" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
-      <div class="text-right col-xs-6 create-po-btn p-r-20 p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex' : ''">
+      <div class="text-right col-xs-6 create-po-btn p-r-15 p-t-10" [ngClass]="isMobile ? 'sm-btn1 d-flex justify-content-flex-end' : ''">
         <ng-container *ngIf="isMobile">
           <button mat-button class="fltr-btn brand-color" (click)="openFilter()">
             <mat-icon inline="true">filter_list</mat-icon>
