--- a/src/app/shared/dialogs/select-currency/select-currency.component.html
+++ b/src/app/shared/dialogs/select-currency/select-currency.component.html
@@ -15,7 +15,7 @@
               <span class="text-semi-bold font-size-vary-grn color-6d6a6a mr-3"> Base Currency </span>
 
               <div class="currency-name d-flex">
-                <img class="mr-2" *ngIf="this.primaryCurrencyData" [src]="this.primaryCurrencyData.imageUrl" [ngClass]="isMobile ? 'w-20-px' : 'w-25-px'" />
+                <img class="mr-2" *ngIf="this.primaryCurrencyData" [src]="this.primaryCurrencyData.imageUrl" [ngClass]="isMobile ? 'width-20-px' : 'width-25-px'" />
                 <span>{{ this.primaryCurrencyData && this.primaryCurrencyData.currencyCode }}</span>
               </div>
             </div>
