--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -64,8 +64,8 @@
                 <app-select-check-all [model]="form.get('selectedSupplier')" [values]="allSuppIds" (selectAllText)="getAllSuppIds($event)"></app-select-check-all>
               </div> -->
 
-              <mat-option *ngFor="let supplier of allSuppliers | SearchPipe: searchSupplier:['supplier_name']" [value]="supplier.supplierId" (click)="choosenSupplier()">{{
-                supplier.supplier_name
+              <mat-option *ngFor="let supplier of allSuppliers | SearchPipe: searchSupplier:['supplierName']" [value]="supplier.supplierId" (click)="choosenSupplier()">{{
+                supplier.supplierName
               }}</mat-option>
             </mat-select>
           </mat-form-field>
