--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -68,14 +68,14 @@
 
 <form *ngIf="allSuppliers.length" [formGroup]="supplierForm">
   <div class="example-container mat-elevation-z8">
-    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplier_name']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
+    <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:['supplierName']" formArrayName="forms" class="mat-elevation-z4 col-sm-12 mt-3">
       <ng-container matColumnDef="Supplier Name">
         <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
         <td mat-cell *matCellDef="let element; let i = index" [formGroupName]="i" class="p-rem-t-5">
           <mat-checkbox #ch [checked]="element.checked" (change)="valueChange(element, ch, i)"> </mat-checkbox>
-          <span class="supplier-name ml-3 position-absolute">{{ element.supplier_name }}</span>
+          <span class="supplier-name ml-3 position-absolute">{{ element.supplierName }}</span>
           <span class="d-block supplier-rates rfq-supplier-rates minwidth-150-px">
-            <view-rating [supplierId]="element.supplierId" [ratings]="element.supplier_rating"></view-rating>
+            <view-rating [supplierId]="element.supplierId" [ratings]="element.supplierRating"></view-rating>
           </span>
         </td>
       </ng-container>
@@ -87,7 +87,7 @@
 
       <ng-container matColumnDef="Phone No.">
         <th mat-header-cell *matHeaderCellDef>Phone No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.contact_no }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.contactNo }}</td>
       </ng-container>
 
       <!-- <ng-container matColumnDef="PAN No.">
