--- a/src/app/shared/dialogs/selectPoApprover/selectPo.html
+++ b/src/app/shared/dialogs/selectPoApprover/selectPo.html
@@ -16,7 +16,7 @@
         </div>
       </mat-radio-group>
 
-      <div mat-dialog-actions>
+      <div mat-dialog-actions class="p-t-20 p-b-20">
         <div class="col-xs-12 text-center p-b-1-rem">
           <button mat-raised-button class="main-background-color main-button color-white" (click)="sendPo()">Select Approver</button>
         </div>
