--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -499,7 +499,7 @@ a:hover {
 
 .mat-checkbox-inner-container {
   width: 19px !important;
-  height: 19px 100 !important;
+  height: 19px !important;
 }
 
 .display-block {
