--- a/src/assets/scss/pages/po-card.component.scss
+++ b/src/assets/scss/pages/po-card.component.scss
@@ -117,6 +117,7 @@
 /* Order correctly by floating highest to the right */
 .rfq-rates .rate > label {
     float: right;
+    margin: 0px;
 }
 
 input:not(:checked) ~ label {
@@ -127,7 +128,7 @@ input:not(:checked) ~ label {
 .rfq-rates .rate > label:before {
     display: inline-block;
     font-size: 1.1rem;
-    padding: .3rem .2rem;
+    padding: .1rem .2rem;
     margin: 0;
     cursor: pointer;
     font-family: FontAwesome;
