--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -424,10 +424,10 @@ a:hover {
   margin: 0px auto;
 }
 
-.mat-expansion-panel-header.mat-expanded:focus,
-.mat-expansion-panel-header.mat-expanded:hover {
-  background: #ffffff !important;
-}
+// .mat-expansion-panel-header.mat-expanded:focus,
+// .mat-expansion-panel-header.mat-expanded:hover {
+//   background: #ffffff !important;
+// }
 
 // Custom Css for ScrollBar
 /* width */
