--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -287,9 +287,7 @@
             <div *ngIf="acceptedRejectedPOListTemp">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
                 <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-rem-r-5 p-rem-r-5' : ''">
-                  <mat-panel-title>
-                    <div class="col-xs-5 text-left approved">Approved P.O.</div>
-                  </mat-panel-title>
+                  <mat-panel-title>Approved P.O.</mat-panel-title>
                 </mat-expansion-panel-header>
 
                 <div class="example-container mat-elevation-z8 approved-po">
