bom screen - replaced receipts text with direct purchase

--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -38,8 +38,8 @@
               <span class="material-icons">menu</span>
             </button>
             <mat-menu #menu="matMenu" class="bom-detail-dropdown-menus">
-              <button mat-menu-item (click)="openGrnViaExcelDialog()">Create Receipt via Excel</button>
-              <button mat-menu-item (click)="openGrnDialog()">Create Receipt via System</button>
+              <button mat-menu-item (click)="openGrnViaExcelDialog()">Create Direct Purchase via Excel</button>
+              <button mat-menu-item (click)="openGrnDialog()">Create Direct Purchase via System</button>
               <!-- <button mat-menu-item (click)="addMaterial()">Add/Edit Material</button> -->
               <button mat-menu-item (click)="addMaterial()">Add Material</button>
               <button mat-menu-item (click)="editMaterial()">Edit Material</button>
