--- a/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
+++ b/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
@@ -1,6 +1,6 @@
 <section class="modal-outer">
   <div class="modal-header">
-    <h5 mat-dialog-title class="mb-0">Direct Receipt via excel</h5>
+    <h5 mat-dialog-title class="mb-0">Direct Purchase via excel</h5>
     <button type="button" class="close" (click)="cancel()" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
